XWIKI-11745: Fail the build when unit test output content to stdout or stderr * Make the modules with outputs use the new simpler way to exclude the verification

--- a/xwiki-platform-core/xwiki-platform-annotations/xwiki-platform-annotation-core/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-annotations/xwiki-platform-annotation-core/pom.xml
@@ -28,6 +28,10 @@
   <artifactId>xwiki-platform-annotation-core</artifactId>
   <name>XWiki Platform - Annotations - Core Services</name>
   <packaging>jar</packaging>
+  <properties>
+    <!-- TODO: Remove once the tests have been fixed to not output anything to the console! -->
+    <xwiki.surefire.captureconsole.skip>true</xwiki.surefire.captureconsole.skip>
+  </properties>
   <dependencies>
     <dependency>
       <groupId>org.xwiki.rendering</groupId>
@@ -114,14 +118,6 @@
             </goals>
           </execution>
         </executions>
-      </plugin>
-      <!-- TODO: Remove once the tests have been fixed to not output anything to the console! -->
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <configuration>
-          <properties combine.self="override"/>
-        </configuration>
       </plugin>
     </plugins>
   </build>
