--- a/xwiki-platform-core/xwiki-platform-cache/xwiki-platform-cache-oscache/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-cache/xwiki-platform-cache-oscache/pom.xml
@@ -35,6 +35,8 @@
   <description>XWiki Platform - Cache - OSCache</description>
   <properties>
     <xwiki.jacoco.instructionRatio>0.71</xwiki.jacoco.instructionRatio>
+    <!-- TODO: Remove once the tests have been fixed to not output anything to the console! -->
+    <xwiki.surefire.captureconsole.skip>true</xwiki.surefire.captureconsole.skip>
   </properties>
   <dependencies>
     <!-- We only need this dependency for the Logging API/Implementation part -->
@@ -84,14 +86,6 @@
         <!-- Apply the Checkstyle configurations defined in the top level pom.xml file -->
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-checkstyle-plugin</artifactId>
-      </plugin>
-      <!-- TODO: Remove once the tests have been fixed to not output anything to the console! -->
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <configuration>
-          <properties combine.self="override"/>
-        </configuration>
       </plugin>
     </plugins>
   </build>
