--- a/xwiki-platform-core/xwiki-platform-component/xwiki-platform-component-wiki/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-component/xwiki-platform-component-wiki/pom.xml
@@ -35,6 +35,8 @@
     <xwiki.jacoco.instructionRatio>0.40</xwiki.jacoco.instructionRatio>
     <!-- Name to display by the Extension Manager -->
     <xwiki.extension.name>Wiki Component API</xwiki.extension.name>
+    <!-- TODO: Remove once the tests have been fixed to not output anything to the console! -->
+    <xwiki.surefire.captureconsole.skip>true</xwiki.surefire.captureconsole.skip>
   </properties>
   <dependencies>
     <dependency>
@@ -89,14 +91,6 @@
             <!-- Implements InvocationHandler and throwing 'Throwable' is not allowed. -->
             **/DefaultWikiComponentProxy.java
           </excludes>
-        </configuration>
-      </plugin>
-      <!-- TODO: Remove once the tests have been fixed to not output anything to the console! -->
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <configuration>
-          <properties combine.self="override"/>
         </configuration>
       </plugin>
     </plugins>
