--- a/xwiki-platform-core/xwiki-platform-feed/xwiki-platform-feed-api/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-feed/xwiki-platform-feed-api/pom.xml
@@ -32,6 +32,8 @@
   <description>API for feeds (RSS, ATOM, etc)</description>
   <properties>
     <xwiki.jacoco.instructionRatio>0.13</xwiki.jacoco.instructionRatio>
+    <!-- TODO: Remove once the tests have been fixed to not output anything to the console! -->
+    <xwiki.surefire.captureconsole.skip>true</xwiki.surefire.captureconsole.skip>
   </properties>
   <dependencies>
     <dependency>
@@ -94,14 +96,6 @@
             **/plugin/feed/XWikiFeedFetcher.java,
             **/util/TidyMessageLogger.java
           </excludes>
-        </configuration>
-      </plugin>
-      <!-- TODO: Remove once the tests have been fixed to not output anything to the console! -->
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <configuration>
-          <properties combine.self="override"/>
         </configuration>
       </plugin>
     </plugins>
