--- a/xwiki-platform-tools/xwiki-platform-tool-standards-validator/pom.xml
+++ b/xwiki-platform-tools/xwiki-platform-tool-standards-validator/pom.xml
@@ -32,6 +32,8 @@
   <description>XWiki Platform - Tools - Web Standard Validator</description>
   <properties>
     <xwiki.jacoco.instructionRatio>0.86</xwiki.jacoco.instructionRatio>
+    <!-- TODO: Remove once the tests have been fixed to not output anything to the console! -->
+    <xwiki.surefire.captureconsole.skip>true</xwiki.surefire.captureconsole.skip>
   </properties>
   <dependencies>
     <dependency>
