--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,8 @@
     <rendering.version>${platform.version}</rendering.version>
     <!-- Version of HSQLDB that we use in Platform when import XARs for creating functional test environments -->
     <hsqldb.version>2.3.1</hsqldb.version>
+    <!-- By default check that unit tests don't output anything to the console -->
+    <xwiki.surefire.captureconsole.skip>false</xwiki.surefire.captureconsole.skip>
   </properties>
   <scm>
     <connection>scm:git:git://github.com/xwiki/xwiki-platform.git</connection>
@@ -136,7 +138,29 @@
             <include>**/*Test.java</include>
             <include>**/*IntegrationTests.java</include>
           </includes>
+          <!-- Verify that unit tests don't output anything to stdout/stderr -->
+          <systemProperties combine.children="append">
+            <!-- This property makes it simple for some module to exclude the check (for example for functional
+                 tests) -->
+            <property>
+              <name>xwiki.surefire.captureconsole.skip</name>
+              <value>${xwiki.surefire.captureconsole.skip}</value>
+            </property>
+          </systemProperties>
+          <properties>
+            <property>
+              <name>listener</name>
+              <value>org.xwiki.test.CaptureConsoleRunListener</value>
+            </property>
+          </properties>
         </configuration>
+        <dependencies>
+          <dependency>
+            <groupId>org.xwiki.commons</groupId>
+            <artifactId>xwiki-commons-tool-test-simple</artifactId>
+            <version>${project.version}</version>
+          </dependency>
+        </dependencies>
       </plugin>
     </plugins>
   </build>
