--- a/xwiki-platform-core/xwiki-platform-annotations/xwiki-platform-annotation-maintainer/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-annotations/xwiki-platform-annotation-maintainer/pom.xml
@@ -31,6 +31,8 @@
   <packaging>jar</packaging>
   <properties>
     <xwiki.jacoco.instructionRatio>0.88</xwiki.jacoco.instructionRatio>
+    <!-- TODO: Remove once the tests have been fixed to not output anything to the console! -->
+    <xwiki.surefire.captureconsole.skip>true</xwiki.surefire.captureconsole.skip>
   </properties>
   <dependencies>
     <dependency>
@@ -105,14 +107,6 @@
           <excludes>
             org/xwiki/annotation/maintainer/AbstractAnnotationMaintainer.java
           </excludes>
-        </configuration>
-      </plugin>
-      <!-- TODO: Remove once the tests have been fixed to not output anything to the console! -->
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <configuration>
-          <properties combine.self="override"/>
         </configuration>
       </plugin>
     </plugins>
