--- a/xwiki-platform-core/xwiki-platform-configuration/xwiki-platform-configuration-default/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-configuration/xwiki-platform-configuration-default/pom.xml
@@ -33,6 +33,8 @@
   <description>XWiki Platform - Configuration - Default</description>
   <properties>
     <xwiki.jacoco.instructionRatio>0.82</xwiki.jacoco.instructionRatio>
+    <!-- TODO: Remove once the tests have been fixed to not output anything to the console! -->
+    <xwiki.surefire.captureconsole.skip>true</xwiki.surefire.captureconsole.skip>
   </properties>
   <dependencies>
     <dependency>
@@ -97,14 +99,6 @@
             org/xwiki/configuration/internal/CompositeConfigurationSource.java,
             org/xwiki/configuration/internal/DefaultConfigurationSource.java
           </excludes>
-        </configuration>
-      </plugin>
-      <!-- TODO: Remove once the tests have been fixed to not output anything to the console! -->
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <configuration>
-          <properties combine.self="override"/>
         </configuration>
       </plugin>
     </plugins>
