--- a/xwiki-platform-core/xwiki-platform-display/xwiki-platform-display-macro/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-display/xwiki-platform-display-macro/pom.xml
@@ -32,6 +32,8 @@
   <description>XWiki Platform - Display - Macro</description>
   <properties>
     <xwiki.jacoco.instructionRatio>0.80</xwiki.jacoco.instructionRatio>
+    <!-- TODO: Remove once the tests have been fixed to not output anything to the console! -->
+    <xwiki.surefire.captureconsole.skip>true</xwiki.surefire.captureconsole.skip>
   </properties>
   <dependencies>
     <dependency>
@@ -142,14 +144,6 @@
           <excludes>
             org/xwiki/rendering/internal/macro/display/DisplayMacro.java
           </excludes>
-        </configuration>
-      </plugin>
-      <!-- TODO: Remove once the tests have been fixed to not output anything to the console! -->
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <configuration>
-          <properties combine.self="override"/>
         </configuration>
       </plugin>
     </plugins>
