--- a/xwiki-platform-core/xwiki-platform-observation/xwiki-platform-observation-remote/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-observation/xwiki-platform-observation-remote/pom.xml
@@ -33,6 +33,8 @@
   <description>XWiki Platform - Observation - Remote</description>
   <properties>
     <xwiki.jacoco.instructionRatio>0.67</xwiki.jacoco.instructionRatio>
+    <!-- TODO: Remove once the tests have been fixed to not output anything to the console! -->
+    <xwiki.surefire.captureconsole.skip>true</xwiki.surefire.captureconsole.skip>
   </properties>
   <dependencies>
     <dependency>
@@ -101,14 +103,6 @@
         <!-- Apply the Checkstyle configurations defined in the top level pom.xml file -->
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-checkstyle-plugin</artifactId>
-      </plugin>
-      <!-- TODO: Remove once the tests have been fixed to not output anything to the console! -->
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <configuration>
-          <properties combine.self="override"/>
-        </configuration>
       </plugin>
     </plugins>
   </build>
