--- a/xwiki-platform-core/xwiki-platform-security/xwiki-platform-security-api/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-security/xwiki-platform-security-api/pom.xml
@@ -33,6 +33,8 @@
   <packaging>jar</packaging>
   <properties>
     <xwiki.jacoco.instructionRatio>0.74</xwiki.jacoco.instructionRatio>
+    <!-- TODO: Remove once the tests have been fixed to not output anything to the console! -->
+    <xwiki.surefire.captureconsole.skip>true</xwiki.surefire.captureconsole.skip>
   </properties>
   <dependencies>
     <dependency>
@@ -89,14 +91,6 @@
             <!-- Small Fan-Out complexity issue but it would need a big refactor to be fixed. -->
             **/authorization/cache/internal/DefaultSecurityCache.java
           </excludes>
-        </configuration>
-      </plugin>
-      <!-- TODO: Remove once the tests have been fixed to not output anything to the console! -->
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <configuration>
-          <properties combine.self="override"/>
         </configuration>
       </plugin>
     </plugins>
