--- a/xwiki-platform-core/xwiki-platform-xml/xwiki-platform-xml-script/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-xml/xwiki-platform-xml-script/pom.xml
@@ -33,6 +33,8 @@
   <description>XWiki Platform - XML - Script Service</description>
   <properties>
     <xwiki.jacoco.instructionRatio>0.88</xwiki.jacoco.instructionRatio>
+    <!-- TODO: Remove once the tests have been fixed to not output anything to the console! -->
+    <xwiki.surefire.captureconsole.skip>true</xwiki.surefire.captureconsole.skip>
   </properties>
   <dependencies>
     <dependency>
@@ -51,16 +53,4 @@
       <version>${commons.version}</version>
     </dependency>
   </dependencies>
-  <build>
-    <plugins>
-      <!-- TODO: Remove once the tests have been fixed to not output anything to the console! -->
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <configuration>
-          <properties combine.self="override"/>
-        </configuration>
-      </plugin>
-    </plugins>
-  </build>
 </project>
