--- a/xwiki-platform-core/xwiki-platform-faq/xwiki-platform-faq-test/xwiki-platform-faq-test-tests/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-faq/xwiki-platform-faq-test/xwiki-platform-faq-test-tests/pom.xml
@@ -36,6 +36,8 @@
   <properties>
     <!-- TODO: Remove once http://jira.xwiki.org/jira/browse/XWIKI-7581 is fixed -->
     <xwikiCfgSuperadminPassword>pass</xwikiCfgSuperadminPassword>
+    <!-- Functional tests are allowed to output content to the console -->
+    <xwiki.surefire.captureconsole.skip>true</xwiki.surefire.captureconsole.skip>
   </properties>
   <dependencies>
     <dependency>
