XWIKI-11745: Fail the build when unit test output content to stdout or stderr * Fix remaining functional tests

--- a/xwiki-platform-core/xwiki-platform-index/xwiki-platform-index-test/xwiki-platform-index-test-tests/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-index/xwiki-platform-index-test/xwiki-platform-index-test-tests/pom.xml
@@ -35,6 +35,8 @@
   <description>XWiki Platform - Index - Tests - Functional Tests</description>
   <properties>
     <xwikiCfgSuperadminPassword>pass</xwikiCfgSuperadminPassword>
+    <!-- Functional tests are allowed to output content to the console -->
+    <xwiki.surefire.captureconsole.skip>true</xwiki.surefire.captureconsole.skip>
   </properties>
   <dependencies>
     <!-- These XARs will be installed in the packaged XWiki for the test -->
