--- a/xwiki-platform-core/xwiki-platform-uiextension/xwiki-platform-uiextension-test/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-uiextension/xwiki-platform-uiextension-test/pom.xml
@@ -42,6 +42,8 @@
     <xwikiCfgSuperadminPassword>pass</xwikiCfgSuperadminPassword>
     <!-- Override in order to activate the macro transformation required by UI Extensions -->
     <xwikiRenderingTransformations>macro</xwikiRenderingTransformations>
+    <!-- Functional tests are allowed to output content to the console -->
+    <xwiki.surefire.captureconsole.skip>true</xwiki.surefire.captureconsole.skip>
   </properties>
   <dependencies>
     <dependency>
