--- a/xwiki-platform-core/xwiki-platform-messagestream/xwiki-platform-messagestream-test/xwiki-platform-messagestream-test-tests/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-messagestream/xwiki-platform-messagestream-test/xwiki-platform-messagestream-test-tests/pom.xml
@@ -34,6 +34,8 @@
   <packaging>jar</packaging>
   <properties>
     <xwikiCfgSuperadminPassword>pass</xwikiCfgSuperadminPassword>
+    <!-- Functional tests are allowed to output content to the console -->
+    <xwiki.surefire.captureconsole.skip>true</xwiki.surefire.captureconsole.skip>
   </properties>
   <dependencies>
     <dependency>
