--- a/xwiki-platform-core/xwiki-platform-release/xwiki-platform-release-test/xwiki-platform-release-test-tests/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-release/xwiki-platform-release-test/xwiki-platform-release-test-tests/pom.xml
@@ -44,6 +44,8 @@
       com.xpn.xwiki.plugin.skinx.CssSkinFileExtensionPlugin,\
       com.xpn.xwiki.plugin.skinx.LinkExtensionPlugin
     </xwikiCfgPlugins>
+    <!-- Functional tests are allowed to output content to the console -->
+    <xwiki.surefire.captureconsole.skip>true</xwiki.surefire.captureconsole.skip>
   </properties>
   <dependencies>
     <dependency>
