XWIKI-11775: Missing translations keys for Administration's 'User Directory' and 'Applications Panel' sections
- Fixing 'User Directory' section

(cherry picked from commit c52cfd198f09785524dbb0c23d5728cbdc3d1bab)

--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
@@ -2363,6 +2363,7 @@ xe.userdirectory.canCustomizeInfoGuest=The user directory can be customized to d
 xe.userdirectory._avatar=Picture
 xe.userdirectory.doc.name=User ID
 xe.userdirectory.emptyvalue=
+admin.userdirectory=User Directory
 
 
 ### Blog application
