--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
@@ -2731,9 +2731,6 @@ platform.appwithinminutes.classEditorMoveFieldHint=Drag and drop to change the o
 platform.appwithinminutes.classEditorFieldDefaultValueToolTip=Default value
 
 ### Date Picker
-platform.appwithinminutes.classEditorDatePickerMonthNames=January, February, March, April, May, June, July, August, September, October, November, December
-platform.appwithinminutes.classEditorDatePickerWeekDayNames=Sunday, Monday, Tuesday, Wednesday, Thursday, Friday, Saturday
-platform.appwithinminutes.classEditorDatePickerFirstWeekDay=0
 platform.appwithinminutes.classEditorDatePickerAcceptSelectedDate=OK
 platform.appwithinminutes.classEditorDatePickerClearSelectedDate=Clear
 platform.appwithinminutes.classEditorDatePickerSelectCurrentTime=Now
@@ -4857,6 +4854,13 @@ XWiki.XWikiPreferences_admin_email=Admin email
 XWiki.XWikiPreferences_admin_email.hint=The default email address used to send notification emails from
 XWiki.XWikiPreferences_obfuscateEmailAddresses=Obfuscate Email Addresses
 XWiki.XWikiPreferences_obfuscateEmailAddresses.hint=This affects only the email addresses stored in object properties of type Email, as long as the default custom displayer for the Email property type is not overwritten. Example: a...@domain.org
+
+#######################################
+## until 7.0M1
+#######################################
+platform.appwithinminutes.classEditorDatePickerMonthNames=January, February, March, April, May, June, July, August, September, October, November, December
+platform.appwithinminutes.classEditorDatePickerWeekDayNames=Sunday, Monday, Tuesday, Wednesday, Thursday, Friday, Saturday
+platform.appwithinminutes.classEditorDatePickerFirstWeekDay=0
 
 ## Used to indicate where deprecated keys end
 #@deprecatedend
