XWIKI-11789: Cannot save a date property if the date format is locale-dependent and the wiki locale doesn't match the JVM locale * Instantiate the SimpleDateFormat using the context locale. * Use the DateFormatSymbols corresponding to the context locale in the DatePicker.
(cherry picked from commit 0a7dddb85b390cab722f8fbf6006afb9ca1a7ee5)

Conflicts:
	xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties

--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
@@ -2727,9 +2727,6 @@ platform.appwithinminutes.classEditorMoveFieldHint=Drag and drop to change the o
 platform.appwithinminutes.classEditorFieldDefaultValueToolTip=Default value
 
 ### Date Picker
-platform.appwithinminutes.classEditorDatePickerMonthNames=January, February, March, April, May, June, July, August, September, October, November, December
-platform.appwithinminutes.classEditorDatePickerWeekDayNames=Sunday, Monday, Tuesday, Wednesday, Thursday, Friday, Saturday
-platform.appwithinminutes.classEditorDatePickerFirstWeekDay=0
 platform.appwithinminutes.classEditorDatePickerAcceptSelectedDate=OK
 platform.appwithinminutes.classEditorDatePickerClearSelectedDate=Clear
 platform.appwithinminutes.classEditorDatePickerSelectCurrentTime=Now
@@ -4816,6 +4813,13 @@ extensions.info.jobLog.installplan=Install plan log
 extensions.info.jobLog.uninstall=Uninstall log
 #@deprecated job.log.label.uninstallplan
 extensions.info.jobLog.uninstallplan=Uninstall plan log
+
+#######################################
+## until 6.2.5
+#######################################
+platform.appwithinminutes.classEditorDatePickerMonthNames=January, February, March, April, May, June, July, August, September, October, November, December
+platform.appwithinminutes.classEditorDatePickerWeekDayNames=Sunday, Monday, Tuesday, Wednesday, Thursday, Friday, Saturday
+platform.appwithinminutes.classEditorDatePickerFirstWeekDay=0
 
 ## Used to indicate where deprecated keys end
 #@deprecatedend
