--- a/ui/pom.xml
+++ b/ui/pom.xml
@@ -27,7 +27,7 @@
   <parent>
     <groupId>org.xwiki.contrib</groupId>
     <artifactId>application-ckeditor-pom</artifactId>
-    <version>1.0</version>
+    <version>1.1-SNAPSHOT</version>
   </parent>
   <artifactId>application-ckeditor-ui</artifactId>
   <name>CKEditor Integration UI</name>
