--- a/xwiki-platform-core/pom.xml
+++ b/xwiki-platform-core/pom.xml
@@ -39,7 +39,7 @@
     <xwiki.minification.skip>false</xwiki.minification.skip>
     <!-- Follow the specifications regarding the WebJar content path. -->
     <webjar.contentDirectory>${project.build.outputDirectory}/META-INF/resources/webjars/${project.artifactId}/${project.version}</webjar.contentDirectory>
-    <!-- The bootstrap version is used is some places -->
+    <!-- The bootstrap version is used is several places -->
     <bootstrap.version>3.3.2</bootstrap.version>
   </properties>
   <dependencies>
