--- a/xwiki-platform-core/xwiki-platform-wiki/xwiki-platform-wiki-test/xwiki-platform-wiki-test-tests/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-wiki/xwiki-platform-wiki-test/xwiki-platform-wiki-test-tests/pom.xml
@@ -51,6 +51,18 @@
       <version>${project.version}</version>
       <type>xar</type>
     </dependency>
+    <!-- Needed by wiki creation job to resolve extensions -->
+    <dependency>
+      <groupId>org.xwiki.commons</groupId>
+      <artifactId>xwiki-commons-extension-repository-maven</artifactId>
+      <version>${commons.version}</version>
+    </dependency>
+    <!-- For snapshots too -->
+    <dependency>
+      <groupId>org.xwiki.commons</groupId>
+      <artifactId>xwiki-commons-extension-repository-maven-snapshots</artifactId>
+      <version>${commons.version}</version>
+    </dependency>
     <!-- Test dependencies -->
     <dependency>
       <groupId>org.xwiki.platform</groupId>
@@ -104,6 +116,33 @@
             </goals>
           </execution>
         </executions>
+      </plugin>
+      <!-- We set a default UI for the subwiki in the webapp -->
+      <plugin>
+        <groupId>com.google.code.maven-replacer-plugin</groupId>
+        <artifactId>replacer</artifactId>
+        <version>1.5.3</version>
+        <executions>
+          <execution>
+            <phase>generate-test-resources</phase>
+            <goals>
+              <goal>replace</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <basedir>${basedir}/target/xwiki/</basedir>
+          <filesToInclude>webapps/xwiki/META-INF/maven/org.xwiki.platform/xwiki-platform-web/pom.xml</filesToInclude>
+          <regex>false</regex>
+          <commentsEnabled>false</commentsEnabled>
+          <replacements>
+            <replacement>
+              <token>&lt;/properties&gt;</token>
+              <value>    &lt;xwiki.extension.distribution.wikiui&gt;org.xwiki.platform:xwiki-platform-wiki-ui-wiki&lt;/xwiki.extension.distribution.wikiui&gt;
+  &lt;/properties&gt;</value>
+            </replacement>
+          </replacements>
+        </configuration>
       </plugin>
       <!-- Only execute AllTests and not individual tests. We do this to avoid having to start/stop XWiki and the
            browser several times -->
