XWIKI-11822: Add translations keys for Content macro

--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
@@ -1861,6 +1861,11 @@ rendering.macro.messageSender.parameter.visibilityParameter.name=visibilityParam
 rendering.macro.messageSender.parameter.visibilityParameter.description=Some visibility levels (like 'user' and 'group') accept a parameter. In the case of the 2 mentioned levels, the value can be a serialized reference of a user or a group document.
 rendering.macro.messageSender.parameter.visibilityOptions.name=visibilityOptions
 rendering.macro.messageSender.parameter.visibilityOptions.description=Comma separated list of visibility options that the macro should allow the user to choose from.\nThis list should be a sublist of the default ones: 'everyone', 'followers', 'group', 'user'.
+rendering.macro.content.name=Content
+rendering.macro.content.description=Allows writing content in any wiki markup
+rendering.macro.content.parameter.syntax.name=Syntax
+rendering.macro.content.parameter.syntax.description=The wiki syntax in which the content is written (e.g. "xwiki/2.1", "confluence/1.0", etc)
+rendering.macro.content.content.description=The content to execute
 
 ####################
 # Plugins
