XWIKI-11826: Add translations keys for Template macro

--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
@@ -1866,6 +1866,12 @@ rendering.macro.content.description=Allows writing content in any wiki markup
 rendering.macro.content.parameter.syntax.name=Syntax
 rendering.macro.content.parameter.syntax.description=The wiki syntax in which the content is written (e.g. "xwiki/2.1", "confluence/1.0", etc)
 rendering.macro.content.content.description=The content to execute
+rendering.macro.template.name=Template
+rendering.macro.template.description=Insert a template.
+rendering.macro.template.parameter.name.name=Name
+rendering.macro.template.parameter.name.description=The name of the template
+rendering.macro.template.parameter.output.name=Output
+rendering.macro.template.parameter.output.description=Specifies whether or not the result of the execution should be returned the macro.
 
 ####################
 # Plugins
