XWIKI-11834: Add translations keys for Tagcloud macro - Spaces parameter

--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
@@ -1783,6 +1783,8 @@ rendering.macro.tagcloud.name=Tag Cloud
 rendering.macro.tagcloud.description=Displays the cloud of tags in this wiki or in the specified space, if any.
 rendering.macro.tagcloud.parameter.space.name=space
 rendering.macro.tagcloud.parameter.space.description=The space to display the tag cloud for. If missing, the tags in the whole wiki will be displayed.
+rendering.macro.tagcloud.parameter.spaces.name=Spaces
+rendering.macro.tagcloud.parameter.spaces.description=Spaces to display the tag cloud for. Spaces name must be separate by "," character and "'". (i.e. spaces="'My Space','Space2'")
 rendering.macro.activity.name=Activity
 rendering.macro.activity.description=The Activity Macro provides information about recent activities done by the users inside the XWiki instance. It lists the create, edit and delete events for pages, as well as comments, attachments and annotations. 
 rendering.macro.activity.parameter.entries.name=entries
