XWIKI-11810: Add translation keys for Panel's Width
(cherry picked from commit cef2d16e7a90ed6b4da9dcf02e5223ab5a14bfeb)

--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
@@ -3477,6 +3477,12 @@ XWiki.XWikiPreferences_showLeftPanels=Display the left panel column
 XWiki.XWikiPreferences_showRightPanels=Display the right panel column
 XWiki.XWikiPreferences_leftPanelsWidth=Width of the left panel column
 XWiki.XWikiPreferences_rightPanelsWidth=Width of the right panel column
+XWiki.XWikiPreferences_leftPanelsWidth_Small=Small
+XWiki.XWikiPreferences_leftPanelsWidth_Medium=Medium
+XWiki.XWikiPreferences_leftPanelsWidth_Large=Large
+XWiki.XWikiPreferences_rightPanelsWidth_Small=Small
+XWiki.XWikiPreferences_rightPanelsWidth_Medium=Medium
+XWiki.XWikiPreferences_rightPanelsWidth_Large=Large
 XWiki.XWikiPreferences_languages=Supported languages
 XWiki.XWikiPreferences_tags=Activate the tagging
 XWiki.XWikiPreferences_parent=Parent space
