XWIKI-10323: Display a mark in the installed extensions list to distinguish manually installed extension, and extension installed as dependencies

--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
@@ -3934,10 +3934,12 @@ extensions.info.fetch.failed=Failed to retrieve extension data.
 extensions.info.fetch.unauthorized=Unauthorized request. Your session has expired or you lost rights while installing or uninstalling an extension. You need to re-login in order to continue. Do you wish to proceed?
 extensions.info.status.core=Provided
 extensions.info.status.installed=Installed
+extensions.info.status.installed-dependency=Installed as dependency
 extensions.info.status.installed-invalid=Installed but not valid
 extensions.info.status.remote-core=Version {0} is provided
 extensions.info.status.remote-core-incompatible=Incompatible with provided version {0}
 extensions.info.status.remote-installed=Version {0} is installed
+extensions.info.status.remote-installed-dependency=Version {0} is installed as dependency
 extensions.info.status.remote-installed-incompatible=Incompatible with installed version {0}
 extensions.info.status.remote-installed-invalid=Installed version {0} is not valid
 extensions.info.stableVersions.linkLabel=List stable versions
