--- a/xwiki-platform-core/xwiki-platform-administration/xwiki-platform-administration-test/xwiki-platform-administration-test-tests/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-administration/xwiki-platform-administration-test/xwiki-platform-administration-test-tests/pom.xml
@@ -69,10 +69,15 @@
       <version>${project.version}</version>
       <scope>test</scope>
     </dependency>
+  <!-- We currently need to depend on mail-ui in the test because it contains the Mail.SendMailConfigClass. We can not have 
+    administration-ui depend on mail-ui, because mail-ui already depends on administration-ui which would create a loop. mail-ui 
+    just needs the configurable class stuff from administration-ui, so when that gets refactored out, we can fix the dependency 
+    directly in administration-ui and not have anything here specific to mail. -->
     <dependency>
       <groupId>org.xwiki.platform</groupId>
-      <artifactId>xwiki-platform-mail-send-storage</artifactId>
+      <artifactId>xwiki-platform-mail-ui</artifactId>
       <version>${project.version}</version>
+      <type>xar</type>
     </dependency>
     <dependency>
       <groupId>com.icegreen</groupId>
