XWIKI-10027: Show date and time of the install and user who installed for an installed extension

--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
@@ -3916,6 +3916,9 @@ extensions.info.issueManagement=Issues
 extensions.info.globalNamespace=global namespace
 extensions.info.namespaces.global=Installed globally
 extensions.info.namespaces.list=Installed on the following namespaces
+extensions.info.installedBy=Installed by {0} on {1}
+extensions.info.installedGloballyBy=Installed globally by {0} on {1}
+extensions.info.installedOnNamespaceBy={0}, by {1} on {2}
 extensions.info.dependencies.directDependencies={0,choice,0#|0<This extension depends on:}
 extensions.info.dependencies.backwardDependencies={0,choice,0#|0<This extension is required by:}
 extensions.info.dependency.wiki=(in wiki {0})
